<resources>
    <string name="app_name">WeatherApp</string>
    <string name="location">Location</string>
    <string name="updated_at">Updated at</string>
    <string name="clear_sky">Clear Sky</string>
    <string name="_24_c">24°C</string>
    <string name="min_temp">Min temp</string>
    <string name="max_temp">Max temp</string>
    <string name="sunrise">Sunrise</string>
    <string name="_5_30_am">5:30 AM</string>
    <string name="sunset">Sunset</string>
    <string name="_5_30_pm">5:30 PM</string>
    <string name="created_by">See more</string>
    <string name="duke">Information</string>
    <string name="pressure">Pressure</string>
    <string name="humidity">Humidity</string>
    <string name="_80">80%</string>
    <string name="_3_56_m_s">3.56 m/s</string>
    <string name="wind">Wind</string>
    <string name="_1000_hpa">1000 hPa</string>
    <string name="apikey">cc51f4703a68c68a3ea02b463d320bcc</string>
    <string name="icon_weather">icon weather</string>
    <string name="update_at">Update at:</string>
    <string name="today">Today</string>
    <string name="_5_days">5 Day / 3 Hour Forecast</string>
    <string name="ok">OK</string>
    <string name="in_which_mode_would_you_like_to_view_it">In which mode would you like to view it?</string>
    <string name="detail_forecast">Detail Forecast</string>
    <string name="icon_edit_location">Icon edit location</string>
    <string name="icon_sunrise">Icon sunrise</string>
    <string name="icon_sunset">Icon sunset</string>
    <string name="icon_see_more">Icon see more</string>
    <string name="icon_pressure">Icon pressure</string>
    <string name="icon_humidity">Icon humidity</string>
    <string name="icon_wind">Icon wind</string>
    <string name="_0_00">0:00</string>
    <string name="statistic_forecast">Statistic Forecast</string>
    <string name="data_no_found">No Data Found</string>
</resources>